--- a/src/com/dashboard/dashboard.form
+++ b/src/com/dashboard/dashboard.form
@@ -77,7 +77,7 @@
                   <EmptySpace min="-2" pref="0" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="content" max="32767" attributes="0"/>
-                      <Component id="Menu" min="-2" max="-2" attributes="0"/>
+                      <Component id="Menu" max="32767" attributes="0"/>
                   </Group>
               </Group>
           </Group>
